src/test/deca/context/valid/ContextAvecObjet/ManipulationClasse/methodCalledInMethodSameClassArg.deca
// Description:
//  Appel d'une méthode avec un argument dans la classe dans une méthode
//
// Resultats:
//    ok

class A {
    int x = -1;

    int getX(boolean a){
        if(a){
            return x;
        }
        return 0;
    }

    void setX(boolean a){
        x = this.getX(a);
    }
}



